--- a/vineetha.html
+++ b/vineetha.html
@@ -4,7 +4,7 @@
 <body> 
 <h1>  HTML:: Hyper Text Markup Language </h1>
   <hr>
-  <p> html is a mark up language</p>
-  <p>we can create user interactive pages </p>
+  <p> html is a mark up language.we can create user interactive pages </p>
+
   
 </body>
