--- a/vineetha.html
+++ b/vineetha.html
@@ -2,7 +2,7 @@
 
 <head> </head>
 <body> 
-<h1>  HTML:: Hyper Text Markup Language </h1>
+<h1 align="center" >HTML:: Hyper Text Markup Language </h1>
   <hr>
   <p> html is a mark up language.we can create user interactive pages </p>
 
