--- a/vineetha.html
+++ b/vineetha.html
@@ -4,7 +4,7 @@
 <body> 
 <h1 align="center" >HTML:: Hyper Text Markup Language </h1>
   <hr>
-  <p> html is a mark up language.we can create user interactive pages </p>
+  <p> <b>HTML</b> is a <u>mark up language</u>.we can create<i> user interactive pages</i> </p>
 
   
 </body>
