--- a/sony.html
+++ b/sony.html
@@ -6,4 +6,5 @@
 <p> <b>ADDRESS:</b> Brundhavan enclave apartment,etukuru road orchid south flant no:303 </p>
 <p> <b>EMAIL id:</b> <a href ="yerralavanya789@gmail.com"></a> <p>
 <p> <b>CELL no</b> 9490604817</p>
+  </body>
   
