--- a/sony.html
+++ b/sony.html
@@ -4,7 +4,14 @@
 <h1 align="center"><u> MY RESUME </u> </h1>
 <p> <b>NAME: </b> Yerra Lakshmi Lavanya </p>
 <p> <b>ADDRESS:</b> Brundhavan enclave apartment,etukuru road orchid south flant no:303 </p>
-<p> <b>EMAIL id:</b> <a href ="yerralavanya789@gmail.com"></a> <p>
-<p> <b>CELL no</b> 9490604817</p>
-  </body>
+<p> <b>EMAIL id:</b> <a href ="yerralavanya789@gmail.com">yerralavanya789@gmail.com</a> <p>
+<p> <b>CELL no:</b> 9490604817</p>
+  <table border=1>
+                 <tr>
+                          <th>EDUCATGIONAL QUALIFICATIONS</th>
+                 <th>place</th>
+                 <th>institution</th>
+                 <th>percentage</th>
+ 
+    </body>
   
