--- a/sony.html
+++ b/sony.html
@@ -9,9 +9,31 @@
   <table border=1>
                  <tr>
                           <th>EDUCATGIONAL QUALIFICATIONS</th>
-                 <th>place</th>
-                 <th>institution</th>
-                 <th>percentage</th>
- 
+                          <th>place</th>
+                          <th>institution</th>
+                          <th>percentage</th>
+                 </tr>
+                 <tr>
+                   <td>B.Tech</td>
+                   <td>2015-2019</td>
+                   <td>KLUNIVERSITY,vadeswaram</td>
+                   <td>9.1</td>
+                 </tr>
+                 <tr>
+                    <td>Intermediate</td>
+                   <td>2013-2015</td>
+                   <td>Matrix IIT acadeamy,guntur</td>
+                   <td>9.1</td>
+    </tr>
+    <tr>
+       <td>B.Tech</td>
+                   <td>2015-2019</td>
+                   <td>Bhashyam Public School,guntur</td>
+                   <td>9.2</td>
+    </tr>
+  </table>
     </body>
+</html>
+
+
   
