--- a/sony.html
+++ b/sony.html
@@ -8,7 +8,7 @@
 <p> <b>CELL no:</b> 9490604817</p>
   <table border=1>
                  <tr>
-                          <th>EDUCATGIONAL QUALIFICATIONS</th>
+                          <th>EDUCATIONAL QUALIFICATIONS</th>
                           <th>place</th>
                           <th>institution</th>
                           <th>percentage</th>
@@ -26,7 +26,7 @@
                    <td>9.1</td>
     </tr>
     <tr>
-       <td>B.Tech</td>
+       <td>SSC</td>
                    <td>2015-2019</td>
                    <td>Bhashyam Public School,guntur</td>
                    <td>9.2</td>
